--- a/0/index.html
+++ b/0/index.html
@@ -501,7 +501,7 @@
 
             <h2 class="main-text">AVALIE AGORA E RECEBA ATÉ <br> R$5.000,00 DIRETO NO SEU PIX!</h2>
 
-            <a class="cta-button" href="../1">
+            <a class="cta-button" href="../1/">
   INICIAR PESQUISA
 </a>
 
