--- a/1/index.html
+++ b/1/index.html
@@ -991,7 +991,7 @@
       sessionStorage.getItem("utm_params") ||
       "";
 
-    window.location.href = "../2" + params;
+    window.location.href = "../2/" + params;
   };
 }
 
