--- a/2/index.html
+++ b/2/index.html
@@ -966,7 +966,7 @@
       sessionStorage.getItem("utm_params") ||
       "";
 
-    window.location.href = "../3" + params;
+    window.location.href = "../3/" + params;
   };
 }
 
