--- a/0/index.html
+++ b/0/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <script type="text/javascript">
-        var back_redirect_back_link = '../back';
+        var back_redirect_back_link = '../back/';
         history.pushState({}, "", location.href);
         history.pushState({}, "", location.href);
         window.onpopstate = function () {
