--- a/4/index.html
+++ b/4/index.html
@@ -29,7 +29,7 @@
     sessionStorage.getItem("utm_params") ||
     "";
 
-  const back_redirect_back_link = "../back" + params;
+  const back_redirect_back_link = "../back/" + params;
 
   history.pushState({}, "", location.href);
   history.pushState({}, "", location.href);
@@ -1005,7 +1005,7 @@ a.elementor-button.btn-sacar:active {
       sessionStorage.getItem("utm_params") ||
       "";
 
-    window.location.href = "../5" + params;
+    window.location.href = "../5/" + params;
   };
 }
 
