--- a/7/index.html
+++ b/7/index.html
@@ -35,7 +35,7 @@
     sessionStorage.getItem("utm_params") ||
     "";
 
-  const back_redirect_back_link = "../back" + params;
+  const back_redirect_back_link = "../back/" + params;
 
   history.pushState({}, "", location.href);
   history.pushState({}, "", location.href);
@@ -993,7 +993,7 @@ a.elementor-button.btn-sacar:active {
       sessionStorage.getItem("utm_params") ||
       "";
 
-    window.location.href = "../8" + params;
+    window.location.href = "../8/" + params;
   };
 }
 
