--- a/9/index.html
+++ b/9/index.html
@@ -36,7 +36,7 @@
     sessionStorage.getItem("utm_params") ||
     "";
 
-  const back_redirect_back_link = "../back" + params;
+  const back_redirect_back_link = "../back/" + params;
 
   history.pushState({}, "", location.href);
   history.pushState({}, "", location.href);
@@ -1007,7 +1007,7 @@ a.elementor-button.btn-sacar:active {
       sessionStorage.getItem("utm_params") ||
       "";
 
-    window.location.href = "../10" + params;
+    window.location.href = "../10/" + params;
   };
 }
 
