--- a/iof/index.html
+++ b/iof/index.html
@@ -37,7 +37,7 @@
     sessionStorage.getItem("utm_params") ||
     "";
 
-  const back_redirect_back_link = "../back" + params;
+  const back_redirect_back_link = "../back/" + params;
 
   history.pushState({}, "", location.href);
   history.pushState({}, "", location.href);
